--- a/app/public/themes/ice-cream/views/base.twig
+++ b/app/public/themes/ice-cream/views/base.twig
@@ -7,7 +7,7 @@
   <meta name="description" content="{{ site.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {{ function('wp_head') }}
-  <link rel="stylesheet" href="{{ site.theme.link }}/style.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="{{ site.theme.link }}/public/app.css" type="text/css" media="screen" />
   <title>Document</title>
 </head>
 <body class="{{body_class}}">
