Add - Custom Hero & Banner gutenberg blocks

--- a/app/public/themes/ice-cream/views/blocks/banner.twig
+++ b/app/public/themes/ice-cream/views/blocks/banner.twig
@@ -1,13 +1,12 @@
 {#
 /**
- * Block Name: Hero block
+ * Block Name: Banniere Simple blo
  */
 #}
 
-<div class="hero">
+<div class="banner">
   <div>
     <h1>{{ fields.titre }}</h1>
-    <p>{{ fields.slogan }}</p>
     <p>{{ fields.contenu }}</p>
   </div>
 
